# template-fastapi-spa

./: .gitignore  README.md  main.py  pyproject.toml  taskfile.yaml
frontend/: bun.lockb  package.json  vite.config.ts
