[project]
name = "template-python-spa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.4",
    "uvicorn[standard]>=0.32.0",
]

[tool.uv]
allow-insecure-host = ["pypi.org", 'files.pythonhosted.org', 'github.com']
dev-dependencies = [
    "go-task-bin>=3.40.0",
    "nuitka>=2.4.11",
]
